@@ -40,10 +40,10 @@ ru:
           other: "неверной длины (может быть длиной ровно {{count}} символа)"
         taken: "уже существует"
         not_a_number: "не является числом"
-        greater_than: "может иметь значение большее {{count}}"
-        greater_than_or_equal_to: "может иметь значение большее или равное {{count}}"
+        greater_than: "может иметь лишь значение большее {{count}}"
+        greater_than_or_equal_to: "может иметь лишь значение большее или равное {{count}}"
         equal_to: "может иметь лишь значение, равное {{count}}"
-        less_than: "может иметь значение меньшее чем {{count}}"
+        less_than: "может иметь лишь значение меньшее чем {{count}}"
         less_than_or_equal_to: "может иметь значение меньшее или равное {{count}}"
         odd: "может иметь лишь четное значение"
         even: "может иметь лишь нечетное значение"
